--- a/roster.html
+++ b/roster.html
@@ -15,14 +15,17 @@
         <div>
           <form>
             <p>
-              <label for="personName">Name</label>
-              <input type="text" name="personName">
+              <label for="Roster">Name</label>
+              <input type="text" name="Roster">
             </p>
               <button type="submit">Enter</button>
             </p>
+           </form>
         </div>
 
-        <div class="details"></div>
+        <div class="details">
+            <h2>Roster</h2>
+        </div>
        </section>
 
        <script src="roster.js"></script>
