--- a/roster.html
+++ b/roster.html
@@ -22,10 +22,14 @@
             </p>
            </form>
         </div>
+        
 
-        <div class="details">
-      
-        </div>
+       </section>
+       <section>
+                   <h2>Roster:</h2>
+                   <div class="details">
+                   </div>
+                   <div class="delete"></div>
        </section>
 
        <script src="roster.js"></script>
