--- a/roster.html
+++ b/roster.html
@@ -5,8 +5,10 @@
         <title>Megaroster</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
-         <link rel="stylesheet" href="roster.css">
+        <link rel="stylesheet" href="css/foundation.css">
+        <link rel="stylesheet" href="css/app.css">   
+         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
+         <link rel="stylesheet" href="roster.css">-->
     </head>
     <body>
         <h1>Megaroster</h1>
@@ -27,6 +29,10 @@
                    <div class="details">
                    </div>
        </section>
-       <script src="roster.js"></script>
+       <script src="js/vendor/jquery.js"></script>
+       <script src="js/vendor/what-input.js"></script>
+       <script src="js/vendor/foundation.js"></script>
+       <script src="js/app.js"></script>
+       <!--<script src="roster.js"></script>-->
     </body>
 </html>
