--- a/roster.html
+++ b/roster.html
@@ -11,7 +11,24 @@
          <link rel="stylesheet" href="roster.css">-->
     </head>
     <body>
-        <h1>Megaroster</h1>
+        <div class="row">
+            <div class="medium-offset-2 medium-8 columns">
+                <h2>Megaroster</h2>
+                <form>
+                    <div class="small-9 columns">
+                        <input
+                          type="text"
+                          name="studentName"
+                          placeHolder="Enter student name"
+                        >
+                    </div>
+                    <div class="small-3 columns">
+                        <button type="submit" class="button exapnded">Add Student</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!--<h1>Megaroster</h1>
        <section>
         <div>
           <form>
@@ -28,7 +45,7 @@
                    <h2>Roster:</h2>
                    <div class="details">
                    </div>
-       </section>
+       </section>-->
        <script src="js/vendor/jquery.js"></script>
        <script src="js/vendor/what-input.js"></script>
        <script src="js/vendor/foundation.js"></script>
