--- a/roster.html
+++ b/roster.html
@@ -27,6 +27,12 @@
                     </div>
                 </form>
             </div>
+
+            <div class="row">
+                <div class="medium-offset-2 medium-8 columns">
+                    <ul id="studentList"></ul>
+                </div>
+            </div>
         </div>
         <!--<h1>Megaroster</h1>
        <section>
