Add students to the unordered list

--- a/roster.html
+++ b/roster.html
@@ -20,6 +20,8 @@
                           type="text"
                           name="studentName"
                           placeHolder="Enter student name"
+                          autofocus
+                          required
                         >
                     </div>
                     <div class="small-3 columns">
