--- a/roster.html
+++ b/roster.html
@@ -7,8 +7,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/foundation.css">
         <link rel="stylesheet" href="css/app.css">   
-         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
-         <link rel="stylesheet" href="roster.css">-->
     </head>
     <body>
         <div class="row">
@@ -25,7 +23,7 @@
                         >
                     </div>
                     <div class="small-3 columns">
-                        <button type="submit" class="button exapnded">Add Student</button>
+                        <button type="submit" class="button expanded">Add Student</button>
                     </div>
                 </form>
             </div>
@@ -37,34 +35,16 @@
                             <span class="student-name"></span>
                             <span class="actions expanded button-group">
                                 <button type="button" class="remove button alert">Remove</button>
+                                <button type="button" class="secondary button">Promote</button>
                             </span>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-        <!--<h1>Megaroster</h1>
-       <section>
-        <div>
-          <form>
-            <p>
-              <label for="Roster">Name</label>
-              <input type="text" name="Roster">
-            </p>
-              <button type="submit">Enter</button>
-            </p>
-           </form>
-        </div>
-       </section>
-       <section>
-                   <h2>Roster:</h2>
-                   <div class="details">
-                   </div>
-       </section>-->
        <script src="js/vendor/jquery.js"></script>
        <script src="js/vendor/what-input.js"></script>
        <script src="js/vendor/foundation.js"></script>
        <script src="js/app.js"></script>
-       <!--<script src="roster.js"></script>-->
     </body>
 </html>
