added a move up/move down button, not yet working

--- a/roster.html
+++ b/roster.html
@@ -34,8 +34,14 @@
                         <li class="student template">
                             <span class="student-name"></span>
                             <span class="actions expanded button-group">
-                                <button type="button" class="remove button alert">Remove</button>
-                                <button type="button" class="secondary button">Promote</button>
+                                <ul>
+                                  <button type="button" class="remove button alert">Remove</button>
+                                  <button type="button" class="success button">Promote</button>
+                                </ul>
+                                <ul>
+                                  <button type="button" class="secondary1 button">Move Up</button>
+                                  <button type="button" class="secondary2 button">Move Down</button>
+                                </ul>
                             </span>
                         </li>
                     </ul>
