make it prettier, added font awesome

--- a/roster.html
+++ b/roster.html
@@ -6,6 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/foundation.css">
+        <link rel="stylesheet" href="C:\Users\Akash\xtern\Megaroster\font-awesome-4.7.0\css\font-awesome.css">
         <link rel="stylesheet" href="css/app.css">   
     </head>
     <body>
@@ -37,10 +38,18 @@
                             <span class="student-name"></span>
                             <span class="actions expanded button-group">
                                 <ul>
-                                  <button type="button" class="remove button alert">Remove</button>
-                                  <button type="button" class="promote success button">Promote</button>
-                                  <button type="button" class="up secondary button">Move Up</button>
-                                  <button type="button" class="down secondary button">Move Down</button>
+                                  <button type="button" class="remove button alert">
+                                      <i class="fa fa-trash-o"></i>
+                                  </button>
+                                  <button type="button" class="promote success button">
+                                      <i class="fa fa-star-o"></i>
+                                  </button>
+                                  <button type="button" class="up secondary button">
+                                      <i class="fa fa-hand-o-up"></i>
+                                  </button>
+                                  <button type="button" class="down secondary button">
+                                      <i class="fa fa-hand-o-down"></i>
+                                  </button>
                                 </ul>
                             </span>
                         </li>
