--- a/roster.html
+++ b/roster.html
@@ -12,7 +12,7 @@
     <body>
         <div class="row">
             <div class="medium-offset-2 medium-8 columns">
-                <h2>Megaroster</h2>
+                <h2 class="header">Megaroster</h2>
                 <form id="new-student">
                     <div class="input-group"></div>
                         <div class="small-9 columns">
