edit contentable, still in progress

--- a/roster.html
+++ b/roster.html
@@ -50,6 +50,9 @@
                                   <button type="button" class="down secondary button">
                                       <i class="fa fa-hand-o-down"></i>
                                   </button>
+                                  <button type="button" class="save secondary button">
+                                      <!--<i class="fa fa-hand-o-down"></i>-->
+                                  </button>
                                 </ul>
                             </span>
                         </li>
