edit names and save it in array

--- a/roster.html
+++ b/roster.html
@@ -35,7 +35,7 @@
                 <div class="medium-offset-2 medium-8 columns">
                     <ul class="no-bullet" id="studentList">
                         <li class="student template clearfix">
-                            <span id="nombre" class="student-name"></span>
+                            <span id="nombre" class="student-name toEdit"></span>
                             <span class="actions expanded button-group">
                                 <ul>
                                   <button type="button" class="remove button alert">
