Edited names also change in array

--- a/roster.html
+++ b/roster.html
@@ -51,7 +51,7 @@
                                       <i class="fa fa-hand-o-down"></i>
                                   </button>
                                   <button type="button" class="save secondary button">
-                                      <!--<i class="fa fa-hand-o-down"></i>-->
+                                      <i class="fa fa-floppy-o"></i>
                                   </button>
                                 </ul>
                             </span>
