--- a/roster.html
+++ b/roster.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="C:\Users\Akash\xtern\Megaroster\font-awesome-4.7.0\css\font-awesome.css">
         <link rel="stylesheet" href="css/app.css">   
     </head>
-    <body>
+    <body class="back" >
         <div class="row">
             <div class="medium-offset-2 medium-8 columns">
                 <h2 class="header">Megaroster</h2>
